--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,22 @@
 <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-header class="gradient" style="margin-top: 30px;">
 
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <img *ngIf="edited" src="../../assets/mentor/baskargaru.jpg" style="border-radius: 50%;width: 20vh; height: 20vh;margin: auto;display: block;">
+      <p *ngIf="edited" text-center style="color: white;font-weight: bold;margin-bottom: 0px;">Welcome</p>
+      <p *ngIf="edited" text-center style="color: white;font-weight: bold;margin-top: 0px;">Bhaskar</p>
+  </ion-header>
+  <ion-content class="gradient">
+    <ion-list no-lines style="margin-top: 40px;">
+      <button detail-none menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" class="gradient butt">
         {{p.title}}
+        <ion-icon name='{{ p.name }}' item-left></ion-icon>
       </button>
     </ion-list>
   </ion-content>
+
+<ion-footer>
+  <button ion-button full bottom (click)="gotoDestroy()"> Log Out <ion-icon name="md-log-out" item-right padding></ion-icon></button>
+</ion-footer>
 
 </ion-menu>
 
