--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,15 @@
 // http://ionicframework.com/docs/theming/
 
+.gradient {
+  background: #348f50; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #348f50, #56b4d3); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #348f50, #56b4d3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.butt {
+  color: white;
+  font-weight: bold;
+}
 
 // App Global Sass
 // --------------------------------------------------
