--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -42,10 +42,9 @@ page-landing {
     height: 40px;
     border: none;
     border-radius: 8px;
-    background: -webkit-linear-gradient(left, #6FDB9E, #56C6EE);
-    background: -o-linear-gradient(right, #6FDB9E, #56C6EE);
-    background: -moz-linear-gradient(right, #6FDB9E, #56C6EE);
-    background: linear-gradient(to right, #6FDB9E, #56C6EE);
+    background: #348f50; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #348f50, #56b4d3); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #348f50, #56b4d3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: white;
     margin-bottom: 20px;
     font-size: 20px;
