--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -1,3 +1,55 @@
 page-signup {
 
+  body {
+    background: #ccc;
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+  .screen {
+    width: 100%;
+    height: 100%;
+    background-image: url('../../assets/first/icopy.jpg');
+    padding-top: 90px;
+  }
+  #logo {
+    height: 250px;
+    width: 250px;
+    background: -webkit-linear-gradient(left, #6FDB9E, #56C6EE);
+    background: -o-linear-gradient(right, #6FDB9E, #56C6EE);
+    background: -moz-linear-gradient(right, #6FDB9E, #56C6EE);
+    background: linear-gradient(to right, #6FDB9E, #56C6EE);
+  }
+  #sign-in{
+    width: 75%;
+    position: relative;
+    margin: 30px auto;
+  }
+  .info {
+    width: 100%;
+  }
+  #login {
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 8px;
+    background: -webkit-linear-gradient(left, #6FDB9E, #56C6EE);
+    background: -o-linear-gradient(right, #6FDB9E, #56C6EE);
+    background: -moz-linear-gradient(right, #6FDB9E, #56C6EE);
+    background: linear-gradient(to right, #6FDB9E, #56C6EE);
+    color: white;
+    font-size: 20px;
+  }
+
+  .form-link {
+    text-decoration: none;
+    color: white;
+    padding: 0px;
+    font-size: 14px;
+  }
+
+  .form-link:hover {
+    color: #6FDB9E;
+  }
+
+
 }
