--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -10,7 +10,7 @@ page-chat {
   ion-footer {
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.11);
     background-color: #fff;
-    height: 255px;
+    height: auto;
   }
 
   .line-breaker {
@@ -72,6 +72,7 @@ page-chat {
           border: 1px solid #ddd;
           color: #fff;
           width: auto;
+          height: auto;
 
           span.triangle {
             background-color: #fff;
